# core-tessie-api

./: .env.example  .gitignore  AGENTS.md  PROMPT.md  README.md  README_CURSOR_API.md  README_PYTHON.md  build.py  cf-requirements.ignore  cf-requirements.txt  deploy.py  openapi.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tessie-openapi-schema.json  tsconfig.json  wrangler.jsonc  wrangler.toml
migrations/: 0001_init.sql  0002_add_tasks_table.sql  0002_cursor.sql  0002_enhanced_logs.sql
public/: client.js  health.html  index.html  nav.html  operations.html  script.js  session.html  styles.css
src/: index.ts  logging.ts  main.py  mcp.ts  openapi.ts  router.ts  rpc.ts  types.ts  worker.ts
src/cursor/: controllers.ts  policies.ts  router.ts  rpc.ts
src/do/: CursorRoomDO.ts  RoomDO.ts
src/schemas/: apiSchemas.ts  cursorSchemas.ts
src/tests/: defs.ts  runner.ts
src/utils/: ai.ts  db.ts  openapi.ts  security.ts  ws.ts
src_python/: main.py  tessie_client.py
src_python/utils/: __init__.py  health.py
src_typescript/: TessieClient.ts  battery.ts  battery_health.ts  boombox.ts  charges.ts  charging.ts  climate.ts  doors.ts  drives.ts  historical_states.ts  homelink.ts  horn.ts  idles.ts  index.ts  keyless_driving.ts  lights.ts  scheduling.ts  sentry_mode.ts  share.ts  software.ts  speed_limit.ts  state.ts  status.ts  sunroof.ts  tire_pressure.ts  trunks.ts  types.ts  valet_mode.ts  wake.ts  windows.ts
tessie_api/: __init__.py  fake_api.py  jwt_utils.py  tessie_wrapper.py
tests/: conftest.py  examples.md
tests_python/: test_tessie_client.py
